cabal-version:      >=1.10
name:               casper
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2020 Cross Compass Ltd.
maintainer:         jonascarpay@gmail.com
author:             Viktor Kronvall, Jonas Carpay
homepage:           https://github.com/xc-jp/casper#readme
synopsis:           Simple content-addressable store
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:
    Casper
    Content
    DMap
    LargeWords
    Ref
    Var

  other-modules:    Use
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson
    , base                  >=4.7     && <5
    , base16-bytestring     >=1.0.0.0
    , base64-bytestring     >=1.1.0.0
    , bytestring
    , cereal
    , containers
    , cryptonite
    , directory
    , exceptions
    , filepath
    , hashable
    , lens
    , memory
    , mtl
    , process
    , resourcet
    , stm
    , temporary
    , text
    , unordered-containers
    , uuid

test-suite casper-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      aeson
    , base              >=4.7      && <5
    , bytestring
    , casper
    , cereal
    , containers
    , directory         >=1.3.6.0  && <1.4
    , filepath          >=1.4.2.1  && <1.5
    , mtl               >=2.2.2    && <2.3
    , tasty             >=1.3.1    && <1.4
    , tasty-hspec       >=1.1.5.1  && <1.2
    , tf-random
